Implemented base CSS

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>404 Page Not Found</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>404 NOT FOUND</header>
         <div class="container">
-            <div class="image">
                 <img src="images/Scarecrow.png" alt="Image of a scarecrow">
-            </div>
             <div class="message">
                 <h1>I have bad news for you</h1>
                 <p>The page you are looking for might be removed or is temporarily unavailable</p>
                 <input type="button" value="BACK TO HOMEPAGE">
             </div>
         </div>
+        <footer>created by <a href="https://github.com/dsbfelipe" class="bold">dsbfelipe</a> - devChallenges.io</footer>
     </body>
 </html>
