--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>404 Page Not Found</title>
         <link rel="stylesheet" href="styles/styles.css">
+        <meta name="author" content="dsbfelipe">
     </head>
     <body>
         <header>404 NOT FOUND</header>
