--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>404 Page Not Found</title>
-        <link rel="stylesheet" href="../styles/styles.css">
+        <link rel="stylesheet" href="styles/styles.css">
         <meta name="author" content="dsbfelipe">
     </head>
     <body>
         <header>404 NOT FOUND</header>
         <div class="container">
-                <img src="../images/Scarecrow.png" alt="Image of a scarecrow">
+                <img src="images/Scarecrow.png" alt="Image of a scarecrow">
             <div class="message">
                 <h1>I have bad news for you</h1>
                 <p>The page you are looking for might be removed or is temporarily unavailable</p>
